--- a/08_poisson_regression/ws_08_r.ipynb
+++ b/08_poisson_regression/ws_08_r.ipynb
@@ -376,7 +376,7 @@
     "\n",
     "If using character variables, the first level of the alphabetic sort order will be regardes as reference level.\n",
     "\n",
-    "For some functions the character variable has to be converted to a factor, e.g., for the contrasts() fucntion\n"
+    "For some functions the character variable has to be converted to a factor, e.g., for the contrasts() function.\n"
    ]
   },
   {
