Work in progress

--- a/06_multiple_cox_regression/mbk_06_sas_age_sex_r.ipynb
+++ b/06_multiple_cox_regression/mbk_06_sas_age_sex_r.ipynb
@@ -5,7 +5,7 @@
    "id": "df8091c6-2036-476c-b540-77db13c8369e",
    "metadata": {},
    "source": [
-    "# 05 - Simple Cox regression - Categorical variable"
+    "# 06 - Multiple Cox regression"
    ]
   },
   {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "09e0948e-f67e-4798-8b78-888edfcf8a78",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "8b2f5e73",
    "metadata": {},
    "outputs": [
@@ -158,37 +158,41 @@
      "data": {
       "text/html": [
        "<table class=\"dataframe\">\n",
-       "<caption>A tibble: 1 × 5</caption>\n",
+       "<caption>A tibble: 2 × 5</caption>\n",
        "<thead>\n",
        "\t<tr><th scope=col>term</th><th scope=col>estimate</th><th scope=col>std.error</th><th scope=col>statistic</th><th scope=col>p.value</th></tr>\n",
        "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>sexm</td><td>0.361347</td><td>0.2088782</td><td>1.729941</td><td>0.08364085</td></tr>\n",
+       "\t<tr><td>age </td><td>0.02209746</td><td>0.007271229</td><td>3.039027</td><td>0.002373437</td></tr>\n",
+       "\t<tr><td>sexm</td><td>0.29995205</td><td>0.209753305</td><td>1.430023</td><td>0.152710421</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
-       "A tibble: 1 × 5\n",
+       "A tibble: 2 × 5\n",
        "\\begin{tabular}{lllll}\n",
        " term & estimate & std.error & statistic & p.value\\\\\n",
        " <chr> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
        "\\hline\n",
-       "\t sexm & 0.361347 & 0.2088782 & 1.729941 & 0.08364085\\\\\n",
+       "\t age  & 0.02209746 & 0.007271229 & 3.039027 & 0.002373437\\\\\n",
+       "\t sexm & 0.29995205 & 0.209753305 & 1.430023 & 0.152710421\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "A tibble: 1 × 5\n",
+       "A tibble: 2 × 5\n",
        "\n",
        "| term &lt;chr&gt; | estimate &lt;dbl&gt; | std.error &lt;dbl&gt; | statistic &lt;dbl&gt; | p.value &lt;dbl&gt; |\n",
        "|---|---|---|---|---|\n",
-       "| sexm | 0.361347 | 0.2088782 | 1.729941 | 0.08364085 |\n",
+       "| age  | 0.02209746 | 0.007271229 | 3.039027 | 0.002373437 |\n",
+       "| sexm | 0.29995205 | 0.209753305 | 1.430023 | 0.152710421 |\n",
        "\n"
       ],
       "text/plain": [
-       "  term estimate std.error statistic p.value   \n",
-       "1 sexm 0.361347 0.2088782 1.729941  0.08364085"
+       "  term estimate   std.error   statistic p.value    \n",
+       "1 age  0.02209746 0.007271229 3.039027  0.002373437\n",
+       "2 sexm 0.29995205 0.209753305 1.430023  0.152710421"
       ]
      },
      "metadata": {},
@@ -199,9 +203,9 @@
     "library(tidyverse)\n",
     "library(broom)\n",
     "library(survival)\n",
-    "pbc1 <- pbc %>% select(time, status, sex) %>% na.omit()\n",
+    "pbc1 <- pbc %>% select(time, status, age, sex) %>% na.omit()\n",
     "pbc1$status <- ifelse(pbc1$status == 0, 0, 1) # recode of status, all events equal 1, censored equal 0\n",
-    "my_cox <- coxph(formula = Surv(time, status) ~ sex, data = pbc1)\n",
+    "my_cox <- coxph(formula = Surv(time, status) ~ age + sex, data = pbc1)\n",
     "tidy(my_cox)"
    ]
   },
@@ -227,7 +231,7 @@
    "metadata": {},
    "source": [
     "### Block 1\n",
-    "![Block 1](img_screenshots_sex/block_1.png)"
+    "![Block 1](img_screenshots_age_sex/block_1.png)"
    ]
   },
   {
@@ -259,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "4514e381-7401-4124-b61c-bd629fd9348e",
    "metadata": {},
    "outputs": [
@@ -311,7 +315,7 @@
    "metadata": {},
    "source": [
     "### Block 2\n",
-    "![Block 2](img_screenshots_sex/block_2.png)"
+    "![Block 2](img_screenshots_age_sex/block_2.png)"
    ]
   },
   {
@@ -334,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "f5de7fb8-4f28-44e8-84ba-169cf8449cd4",
    "metadata": {},
    "outputs": [
@@ -413,7 +417,7 @@
    "metadata": {},
    "source": [
     "### Block 3\n",
-    "![Block 3](img_screenshots_sex/block_3.png)"
+    "![Block 3](img_screenshots_age_sex/block_3.png)"
    ]
   },
   {
@@ -436,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "id": "524a84dd-a312-4857-8d79-a319247106a8",
    "metadata": {},
    "outputs": [
@@ -493,7 +497,7 @@
    "metadata": {},
    "source": [
     "### Block 4\n",
-    "![Block 4](img_screenshots_sex/block_4.png)"
+    "![Block 4](img_screenshots_age_sex/block_4.png)"
    ]
   },
   {
@@ -517,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "id": "bab67670-6351-4b95-bda7-c84c151dd2a0",
    "metadata": {},
    "outputs": [
@@ -531,7 +535,7 @@
        "\t<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>418</td><td>186</td><td>2.748578</td><td>0.09734096</td><td>3.024981</td><td>0.08199126</td><td>2.99</td><td>0.08364085</td><td>NA</td><td>NA</td><td>0.006553974</td><td>0.9919921</td><td>0.5182891</td><td>0.01261923</td><td>-1007.537</td><td>2017.075</td><td>2020.301</td><td>418</td></tr>\n",
+       "\t<tr><td>418</td><td>186</td><td>11.97965</td><td>0.002504107</td><td>12.29379</td><td>0.002140117</td><td>12.24</td><td>0.002202114</td><td>NA</td><td>NA</td><td>0.02825265</td><td>0.9919921</td><td>0.569148</td><td>0.02173493</td><td>-1002.922</td><td>2009.844</td><td>2016.295</td><td>418</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -541,7 +545,7 @@
        " n & nevent & statistic.log & p.value.log & statistic.sc & p.value.sc & statistic.wald & p.value.wald & statistic.robust & p.value.robust & r.squared & r.squared.max & concordance & std.error.concordance & logLik & AIC & BIC & nobs\\\\\n",
        " <int> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <int>\\\\\n",
        "\\hline\n",
-       "\t 418 & 186 & 2.748578 & 0.09734096 & 3.024981 & 0.08199126 & 2.99 & 0.08364085 & NA & NA & 0.006553974 & 0.9919921 & 0.5182891 & 0.01261923 & -1007.537 & 2017.075 & 2020.301 & 418\\\\\n",
+       "\t 418 & 186 & 11.97965 & 0.002504107 & 12.29379 & 0.002140117 & 12.24 & 0.002202114 & NA & NA & 0.02825265 & 0.9919921 & 0.569148 & 0.02173493 & -1002.922 & 2009.844 & 2016.295 & 418\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -550,16 +554,16 @@
        "\n",
        "| n &lt;int&gt; | nevent &lt;dbl&gt; | statistic.log &lt;dbl&gt; | p.value.log &lt;dbl&gt; | statistic.sc &lt;dbl&gt; | p.value.sc &lt;dbl&gt; | statistic.wald &lt;dbl&gt; | p.value.wald &lt;dbl&gt; | statistic.robust &lt;dbl&gt; | p.value.robust &lt;dbl&gt; | r.squared &lt;dbl&gt; | r.squared.max &lt;dbl&gt; | concordance &lt;dbl&gt; | std.error.concordance &lt;dbl&gt; | logLik &lt;dbl&gt; | AIC &lt;dbl&gt; | BIC &lt;dbl&gt; | nobs &lt;int&gt; |\n",
        "|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
-       "| 418 | 186 | 2.748578 | 0.09734096 | 3.024981 | 0.08199126 | 2.99 | 0.08364085 | NA | NA | 0.006553974 | 0.9919921 | 0.5182891 | 0.01261923 | -1007.537 | 2017.075 | 2020.301 | 418 |\n",
+       "| 418 | 186 | 11.97965 | 0.002504107 | 12.29379 | 0.002140117 | 12.24 | 0.002202114 | NA | NA | 0.02825265 | 0.9919921 | 0.569148 | 0.02173493 | -1002.922 | 2009.844 | 2016.295 | 418 |\n",
        "\n"
       ],
       "text/plain": [
-       "  n   nevent statistic.log p.value.log statistic.sc p.value.sc statistic.wald\n",
-       "1 418 186    2.748578      0.09734096  3.024981     0.08199126 2.99          \n",
-       "  p.value.wald statistic.robust p.value.robust r.squared   r.squared.max\n",
-       "1 0.08364085   NA               NA             0.006553974 0.9919921    \n",
+       "  n   nevent statistic.log p.value.log statistic.sc p.value.sc  statistic.wald\n",
+       "1 418 186    11.97965      0.002504107 12.29379     0.002140117 12.24         \n",
+       "  p.value.wald statistic.robust p.value.robust r.squared  r.squared.max\n",
+       "1 0.002202114  NA               NA             0.02825265 0.9919921    \n",
        "  concordance std.error.concordance logLik    AIC      BIC      nobs\n",
-       "1 0.5182891   0.01261923            -1007.537 2017.075 2020.301 418 "
+       "1 0.569148    0.02173493            -1002.922 2009.844 2016.295 418 "
       ]
      },
      "metadata": {},
@@ -576,7 +580,7 @@
    "metadata": {},
    "source": [
     "### Block 5\n",
-    "![Block 5](img_screenshots_sex/block_5.png)"
+    "![Block 5](img_screenshots_age_sex/block_5.png)"
    ]
   },
   {
@@ -599,36 +603,37 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b0f607d-8a2d-46ce-9cba-b69e3b677323",
+   "id": "2c82a42b-ce24-4730-baa2-e7cddecdf275",
    "metadata": {},
    "source": [
     "Todo: Reproduce global test Likelihood Ratio by hand\n",
     "\n",
     "Score: see above statistic.sc\n",
     "\n",
-    "Wald: see above statistic.wald"
+    "Wald: see above statistic.wald\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "9acefbec-732a-4135-a8d1-6499b4bfc2fb",
+   "execution_count": 22,
+   "id": "9ad7799e-36dc-451e-ac80-ea370fa4c693",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<strong>test:</strong> 3.02498133816624"
+       "<strong>test:</strong> 12.2937892784102"
       ],
       "text/latex": [
-       "\\textbf{test:} 3.02498133816624"
+       "\\textbf{test:} 12.2937892784102"
       ],
       "text/markdown": [
-       "**test:** 3.02498133816624"
+       "**test:** 12.2937892784102"
       ],
       "text/plain": [
        "    test \n",
-       "3.024981 "
+       "12.29379 "
       ]
      },
      "metadata": {},
@@ -637,17 +642,17 @@
     {
      "data": {
       "text/html": [
-       "<strong>test:</strong> 2.99"
+       "<strong>test:</strong> 12.24"
       ],
       "text/latex": [
-       "\\textbf{test:} 2.99"
+       "\\textbf{test:} 12.24"
       ],
       "text/markdown": [
-       "**test:** 2.99"
+       "**test:** 12.24"
       ],
       "text/plain": [
-       "test \n",
-       "2.99 "
+       " test \n",
+       "12.24 "
       ]
      },
      "metadata": {},
@@ -666,7 +671,7 @@
    "metadata": {},
    "source": [
     "### Block 6\n",
-    "![Block 6](img_screenshots_sex/block_6.png)"
+    "![Block 6](img_screenshots_age_sex/block_6.png)"
    ]
   },
   {
@@ -689,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "id": "3ea59084-d045-4557-96e6-7b31c032bbcd",
    "metadata": {},
    "outputs": [
@@ -697,37 +702,41 @@
      "data": {
       "text/html": [
        "<table class=\"dataframe\">\n",
-       "<caption>A tibble: 1 × 5</caption>\n",
+       "<caption>A tibble: 2 × 5</caption>\n",
        "<thead>\n",
        "\t<tr><th scope=col>term</th><th scope=col>estimate</th><th scope=col>std.error</th><th scope=col>statistic</th><th scope=col>p.value</th></tr>\n",
        "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>sexm</td><td>0.361347</td><td>0.2088782</td><td>1.729941</td><td>0.08364085</td></tr>\n",
+       "\t<tr><td>age </td><td>0.02209746</td><td>0.007271229</td><td>3.039027</td><td>0.002373437</td></tr>\n",
+       "\t<tr><td>sexm</td><td>0.29995205</td><td>0.209753305</td><td>1.430023</td><td>0.152710421</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
-       "A tibble: 1 × 5\n",
+       "A tibble: 2 × 5\n",
        "\\begin{tabular}{lllll}\n",
        " term & estimate & std.error & statistic & p.value\\\\\n",
        " <chr> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
        "\\hline\n",
-       "\t sexm & 0.361347 & 0.2088782 & 1.729941 & 0.08364085\\\\\n",
+       "\t age  & 0.02209746 & 0.007271229 & 3.039027 & 0.002373437\\\\\n",
+       "\t sexm & 0.29995205 & 0.209753305 & 1.430023 & 0.152710421\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "A tibble: 1 × 5\n",
+       "A tibble: 2 × 5\n",
        "\n",
        "| term &lt;chr&gt; | estimate &lt;dbl&gt; | std.error &lt;dbl&gt; | statistic &lt;dbl&gt; | p.value &lt;dbl&gt; |\n",
        "|---|---|---|---|---|\n",
-       "| sexm | 0.361347 | 0.2088782 | 1.729941 | 0.08364085 |\n",
+       "| age  | 0.02209746 | 0.007271229 | 3.039027 | 0.002373437 |\n",
+       "| sexm | 0.29995205 | 0.209753305 | 1.430023 | 0.152710421 |\n",
        "\n"
       ],
       "text/plain": [
-       "  term estimate std.error statistic p.value   \n",
-       "1 sexm 0.361347 0.2088782 1.729941  0.08364085"
+       "  term estimate   std.error   statistic p.value    \n",
+       "1 age  0.02209746 0.007271229 3.039027  0.002373437\n",
+       "2 sexm 0.29995205 0.209753305 1.430023  0.152710421"
       ]
      },
      "metadata": {},
@@ -744,7 +753,7 @@
    "metadata": {},
    "source": [
     "### Block 7\n",
-    "![Block 7](img_screenshots_sex/block_7.png)"
+    "![Block 7](img_screenshots_age_sex/block_7.png)"
    ]
   },
   {
@@ -771,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "id": "d66ed745-aa78-4f5e-b690-5bdcb03e89a1",
    "metadata": {},
    "outputs": [
@@ -779,22 +788,24 @@
      "data": {
       "text/plain": [
        "Call:\n",
-       "coxph(formula = Surv(time, status) ~ sex, data = pbc1)\n",
+       "coxph(formula = Surv(time, status) ~ age + sex, data = pbc1)\n",
        "\n",
        "  n= 418, number of events= 186 \n",
        "\n",
-       "       coef exp(coef) se(coef)    z Pr(>|z|)  \n",
-       "sexm 0.3613    1.4353   0.2089 1.73   0.0836 .\n",
+       "         coef exp(coef) se(coef)     z Pr(>|z|)   \n",
+       "age  0.022097  1.022343 0.007271 3.039  0.00237 **\n",
+       "sexm 0.299952  1.349794 0.209753 1.430  0.15271   \n",
        "---\n",
        "Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
        "\n",
        "     exp(coef) exp(-coef) lower .95 upper .95\n",
-       "sexm     1.435     0.6967    0.9531     2.161\n",
+       "age      1.022     0.9781    1.0079     1.037\n",
+       "sexm     1.350     0.7409    0.8948     2.036\n",
        "\n",
-       "Concordance= 0.518  (se = 0.013 )\n",
-       "Likelihood ratio test= 2.75  on 1 df,   p=0.1\n",
-       "Wald test            = 2.99  on 1 df,   p=0.08\n",
-       "Score (logrank) test = 3.02  on 1 df,   p=0.08\n"
+       "Concordance= 0.569  (se = 0.022 )\n",
+       "Likelihood ratio test= 11.98  on 2 df,   p=0.003\n",
+       "Wald test            = 12.24  on 2 df,   p=0.002\n",
+       "Score (logrank) test = 12.29  on 2 df,   p=0.002\n"
       ]
      },
      "metadata": {},
